<resources>
    <string name="app_name">HEARTBIT</string>
    <string name="title_home">Acasă</string>
    <string name="title_dashboard">Dosar medical</string>
    <string name="title_notifications">Setări</string>
    <string name="password">Password</string>
    <string name="login">Contul meu</string>
    <string name="click_to_register">Nu aveti cont? Inregistrati-va</string>
    <string name="register">Creare cont</string>
    <string name="click_to_login">Aveti deja cont? Autentificati-va</string>
    <string name="cnp">CNP</string>
    <string name="support">Suport</string>
    <string name="title_support">Suport</string>
    <string name="title_calendar">Programările mele</string>
    <string name="notifications_title">Setări</string>
    <string name="dashboard_title">Dosar medical</string>
    <string name="home_title">Acasă</string>
    <string name="calendar_title">Programările mele</string>
    <string name="support_title">Suport</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cnp_text">CNP</string>
    <string name="loginBtn">Login</string>

    <string name="logout_title">Deconectare</string>
    <string name="logout_message">Sunteți sigur că doriți să vă deconectați?</string>
    <string name="logout_positive_button">Deconectare</string>
    <string name="logout_negative_button">Anulare</string>

    <string name="stergere_title">Ştergere</string>
    <string name="stergere_message">Sunteți sigur că doriți să ştergeţi contul?</string>
    <string name="stergere_positive_button">Ştergere</string>
    <string name="stergere_negative_button">Anulare</string>
    <string name="ghid_de_utilizare">Ghid de utilizare</string>
    <string name="solicitare">Solicitare</string>
    <string name="suport">Suport</string>
    <string name="suport_help"><b>Ai nevoie de un alt fel de ajutor?</b> \n\n Sună la clinică! \n <u>0255 200 200</u> \n Luni–Vineri, orele: 09–17\n\n</string>
    <string name="email">Email</string>
    <string name="autentificare">Autentificare</string>
    <string name="resetPass"><u>Ai uitat parola? Reseteaza aici!</u></string>
    <string name="cod">Cod</string>
    <string name="prenume">Prenume</string>
    <string name="nume">Nume</string>
    <string name="setari_cont">Setări</string>
    <string name="schimbare_parol">Schimbare Parolă</string>
    <string name="deconectare">Deconectare cont</string>
    <string name="stergere">Ştergere cont</string>
    <string name="permisiuni">Setări permisiuni</string>
    <string name="permisiune_bluetooth">Permisiune BT</string>
    <string name="cadru_legal">Cadru legal</string>
    <string name="Titlu_setari">Setări aplicaţie</string>
    <string name="ghid_titlu">Ghid de utilizare</string>
    <string name="back">Înapoi</string>
    <string name="text_ghid_utilizare">Bine ați venit în ghidul de utilizare pentru aplicația mobilă <b>HearBit</b>. Acest ghid vă va ajuta să utilizați toate funcționalitățile aplicației noastre în mod eficient și în deplină siguranță. \n\n<b>1. Autentificare utilizatori</b> \nPentru a utiliza aplicația mobilă, trebuie să fiți autentificat. Înregistrați-vă și conectați-vă la aplicație cu ajutorul CNP-ului și a parolei personale. În cazul în care aveți dificultăți în procesul de autentificare, asigurați-vă că introduceți datele corecte și verificați conexiunea la internet. \n\n<b>2. Colectarea datelor de la pacient</b>\n Aplicația mobilă se conectează la dispozitivul wearable și primește datele despre starea de sănătate a pacientului. Pentru a asigura colectarea corectă a datelor, urmați instrucțiunile de conectare și verificați regulat starea conexiunii dintre cele două dispozitive. Datele colectate pot fi folosite pentru a detecta probleme de sănătate și pentru a oferi recomandări medicale în timp real. \n\n<b>3. Procesarea datelor </b>\nAplicația mobilă preia datele colectate de la dispozitivul wearable, le procesează și le transmite către cloud. Acest proces are loc prin intermediul unei conexiuni la internet. Datele sunt transformate în informații utile pentru utilizator, iar aplicația vă oferă recomandări personalizate bazate pe starea de sănătate a pacientului. \n\nAcestea sunt principalele funcționalități ale aplicației noastre mobile. Dacă aveți întrebări sau probleme în timpul utilizării aplicației, nu ezitați să contactați departamentul nostru de asistență tehnică. Suntem mereu aici pentru a vă ajuta!</string>
    <string name="solicitare_titlu">Solicitare</string>
    <string name="motiv">Motivul solicitării</string>
    <string name="detalii">Detalii</string>
    <string name="send">Trimite solicitarea</string>
    <string name="cancel">Renunţare</string>
    <string name="X">X</string>
    <string name="motiv_prompt">Motivul solicitării</string>
    <string name="programari_titlu">Programările mele</string>
    <string name="programare_add">Progr. nouă</string>
    <string name="vezi_recomandari">Recomandări</string>
    <string name="programari">Programări</string>
    <string name="coloana_prog_trecute">trecute</string>
    <string name="prog_coloana_viit">viitoare</string>
    <string name="prg_new">Programare nouă</string>
    <string name="specialitate_progr">Alege specialitatea</string>
    <string name="data_prog">Alege data</string>
    <string name="locatie_prg">Alege locatia</string>
    <string name="medic_prg">Alege medic*</string>
    <string name="send_reuquest">Trimitere cerere</string>
    <string name="parola_now">Introduceţi parola actuală</string>
    <string name="parola_new">Introduceţi parola nouă*</string>
    <string name="parola_text_ajutator">*Noua parolă trebuie să conţină cel puţin 8 caractere (o literă mare, o literă mică, un număr şi un caracter special</string>
    <string name="save_pass">Salvare noua parolă</string>

</resources>