<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".ui.logare.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg"
        android:orientation="vertical">
    <Space
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        tools:ignore="InefficientWeight" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/red_dark"
        android:textSize="35sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:backgroundTint="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:backgroundTint="@color/black"
        android:inputType="textPassword"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cnp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/cnp"
        android:backgroundTint="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nume"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/nume"
        android:backgroundTint="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/prenume"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/prenume"
        android:backgroundTint="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cod"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/cod"
        android:backgroundTint="@color/black"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

   <Space
       android:layout_width="0dp"
       android:layout_height="30dp"
       android:layout_weight="1"
       tools:ignore="InefficientWeight" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/okButton"/>

    <Button
        android:id="@+id/loginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:text="@string/click_to_login"
        android:textSize="15sp"
        android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>