<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1200dp"
    android:minHeight="500dp"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/schimbareParolaTitle"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/schimbare_parol"
            android:textSize="35sp"
            android:textColor="@color/red_dark"/>
        

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/parolaActuala"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/parola_now"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@color/black"
        android:inputType="textPassword"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/parolaNoua"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/parola_new"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@color/black"
        android:inputType="textPassword"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/comfirmareParolaNoua"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/parola_new"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@color/black"
        android:inputType="textPassword"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5sp"/>

    <TextView
        android:id="@+id/text_ajutator_parola"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/parola_text_ajutator"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15sp"/>

    <Button
        android:id="@+id/salvareNouaParola"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/okButton"
        android:text="@string/save_pass"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/returnFromSchimbareParola"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/red_dark"
        android:text="@string/cancel"
        android:textColor="@color/white"/>

</LinearLayout>