<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fontFamily="@font/adamina"
    tools:context=".ui.support.SupportFragment">


    <TextView
        android:id="@+id/header_title_suport"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:gravity="center"
        android:text="@string/suport"
        android:textColor="@color/red_dark"
        android:textSize="35sp" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/table_background_with_border">

        <TableRow>

            <LinearLayout
                android:id="@+id/ghidLayout"
                android:layout_width="378dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_book_24" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/ghid_utilizare"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ghid_de_utilizare"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="end"
                    android:src="@drawable/baseline_arrow_right_24" />
            </LinearLayout>
        </TableRow>
        <RelativeLayout
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <View
                android:layout_width="370dp"
                android:layout_height="3dp"
                android:background="@color/sec_grey"
                android:layout_centerVertical="true" />

        </RelativeLayout>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/solicitareLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/form_new_svgrepo_com" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/solicitare"
                    android:layout_width="225dp"
                    android:layout_height="35dp"
                    android:text="@string/solicitare"
                    android:textSize="30sp"/>

                <Space
                    android:layout_width="-1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="end"
                    android:src="@drawable/baseline_arrow_right_24" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="297dp"
        android:gravity="center|center"
        android:scrollbars="vertical"
        android:text="@string/suport_help"
        android:textSize="30sp"
        />

</LinearLayout>